--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Speedometer"
+                android:text="@string/app_name"
                 android:textSize="48sp"
                 app:layout_constraintBottom_toTopOf="@+id/tvSpeed"
                 app:layout_constraintEnd_toStartOf="@+id/btnAbout"
@@ -47,7 +47,7 @@
                 android:autoSizeTextType="uniform"
                 android:fontFamily="@font/texazgxxaq"
                 android:maxLines="1"
-                android:text="100"
+                android:text="@string/_100"
                 android:textAlignment="center"
                 android:textSize="400sp"
                 app:layout_constraintBottom_toTopOf="@+id/tvCurrentLocation"
@@ -59,7 +59,7 @@
                 android:id="@+id/tvUnits"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Km/h"
+                android:text="@string/km_h"
                 android:textAlignment="center"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -73,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="Current Location"
+                android:text="@string/current_location"
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:maxLines="2"
@@ -85,6 +85,7 @@
 
             <ImageButton
                 android:id="@+id/btnAbout"
+                android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -113,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Accuracy:"
+                android:text="@string/accuracy1"
                 android:textAlignment="viewEnd"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -126,7 +127,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                android:text="Accuracy"
+                android:text="@string/accuracy"
                 android:textAlignment="textStart"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -140,7 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
-                android:text="Direction:"
+                android:text="@string/direction1"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tvDirection"
@@ -155,7 +156,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Direction"
+                android:text="@string/direction"
                 android:textAlignment="viewStart"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -179,7 +180,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Max Speed:"
+                android:text="@string/maxSpeed"
                 android:textAlignment="viewEnd"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -192,7 +193,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Max Speed"
+                android:text="@string/max_speed"
                 android:textColor="#f54b42"
                 android:textAlignment="viewStart"
                 android:textSize="24sp"
@@ -219,7 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:text="loading..."
+                android:text="@string/loading"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tvLong"
                 app:layout_constraintStart_toStartOf="parent"
@@ -230,7 +231,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="loading..."
+                android:text="@string/loading"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tvLat"
@@ -262,7 +263,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Km/h"
+                    android:text="@string/km_h"
                     tools:layout_editor_absoluteX="106dp"
                     tools:layout_editor_absoluteY="644dp" />
 
@@ -270,13 +271,13 @@
                     android:id="@+id/btnRbMh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="M/h" />
+                    android:text="@string/m_h" />
 
                 <RadioButton
                     android:id="@+id/btnRbMs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="m/s"
+                    android:text="@string/m_s"
                     tools:layout_editor_absoluteX="236dp"
                     tools:layout_editor_absoluteY="645dp" />
             </RadioGroup>
@@ -286,7 +287,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Reset"
+                android:text="@string/reset"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.467"
                 app:layout_constraintStart_toStartOf="parent"
